matroska-demux: Unref seek event

https://bugzilla.gnome.org/show_bug.cgi?id=762542